--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <TextView
-        android:layout_width="337dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginBottom="619dp"
         android:text="Tic Tac Toe"
         android:textAlignment="center"
@@ -28,16 +29,17 @@
 
     <TextView
         android:id="@+id/turnnwin"
-        android:layout_width="234dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="570dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="566dp"
         android:text="Player 1 turn"
+        android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#1A237E"
-        android:textSize="26sp"
+        android:textSize="32sp"
         android:textStyle="bold" />
 
     <TextView
@@ -46,11 +48,12 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="262dp"
+        android:layout_marginEnd="252dp"
         android:layout_marginBottom="400dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+        android:contentDescription="textbox0"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -63,11 +66,12 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="165dp"
+        android:layout_marginEnd="155dp"
         android:layout_marginBottom="400dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+        android:contentDescription="textbox1"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -80,11 +84,11 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="62dp"
+        android:layout_marginEnd="58dp"
         android:layout_marginBottom="400dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -97,11 +101,11 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="262dp"
+        android:layout_marginEnd="252dp"
         android:layout_marginBottom="292dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -114,11 +118,10 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="165dp"
+        android:layout_marginEnd="155dp"
         android:layout_marginBottom="292dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -131,11 +134,11 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="62dp"
+        android:layout_marginEnd="58dp"
         android:layout_marginBottom="292dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -149,11 +152,12 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="262dp"
+        android:layout_marginEnd="252dp"
         android:layout_marginBottom="181dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+        android:contentDescription="textbox6"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -166,11 +170,11 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="165dp"
+        android:layout_marginEnd="155dp"
         android:layout_marginBottom="181dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -183,11 +187,11 @@
         android:layout_height="88dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="62dp"
+        android:layout_marginEnd="58dp"
         android:layout_marginBottom="181dp"
         android:background="#070707"
         android:ems="10"
-        android:inputType="text"
+
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -198,40 +202,43 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="225dp"
-        android:layout_height="wrap_content"
+        android:layout_height="99sp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="90dp"
-        android:layout_marginBottom="37dp"
+        android:layout_marginBottom="66dp"
+        android:backgroundTint="#1A237E"
         android:onClick="retry"
         android:text="Retry"
         android:textSize="44sp" />
 
     <TextView
         android:id="@+id/p1stat"
-        android:layout_width="98dp"
+        android:layout_width="204dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="226dp"
-        android:layout_marginBottom="522dp"
-        android:text="P1:"
-        android:textSize="24sp"
+        android:layout_marginEnd="215dp"
+        android:layout_marginBottom="521dp"
+        android:text="P1:0"
+        android:textColor="#1A237E"
+        android:textSize="28sp"
         android:textStyle="bold"
-        android:textColor="#1A237E"/>
+        android:textAlignment="center"/>
 
     <TextView
         android:id="@+id/p2stat"
-        android:layout_width="96dp"
+        android:layout_width="213dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="523dp"
-        android:text="P2:"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#1A237E"/>
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="521dp"
+        android:text="P2:0"
+        android:textAlignment="center"
+        android:textColor="#1A237E"
+        android:textSize="28sp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
