--- a/app/src/main/res/layout/activity_botvsplayer.xml
+++ b/app/src/main/res/layout/activity_botvsplayer.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    tools:context=".botvsplayer">
 
     <TextView
         android:layout_width="match_parent"
@@ -35,7 +34,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="566dp"
-        android:text="Player 1 turn"
+        android:text="Player VS Bot"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#1A237E"
@@ -206,8 +205,8 @@
         android:layout_height="99sp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="88dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="66dp"
         android:backgroundTint="#1A237E"
         android:onClick="retry"
         android:text="Retry"
@@ -240,18 +239,5 @@
         android:textColor="#1A237E"
         android:textSize="28sp"
         android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="143dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/black"
-        android:onClick="navigate"
-        android:text="BOT VS Player" />
-
 
 </RelativeLayout>
