--- a/app/src/main/res/layout/activity_botvsplayer.xml
+++ b/app/src/main/res/layout/activity_botvsplayer.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="navpvp"
     tools:context=".botvsplayer">
 
     <TextView
@@ -50,8 +51,8 @@
         android:layout_marginEnd="252dp"
         android:layout_marginBottom="400dp"
         android:background="#070707"
-        android:ems="10"
         android:contentDescription="textbox0"
+        android:ems="10"
 
         android:onClick="clicker"
         android:textAlignment="center"
@@ -69,8 +70,8 @@
         android:layout_marginEnd="155dp"
         android:layout_marginBottom="400dp"
         android:background="#070707"
-        android:ems="10"
         android:contentDescription="textbox1"
+        android:ems="10"
 
         android:onClick="clicker"
         android:textAlignment="center"
@@ -155,8 +156,8 @@
         android:layout_marginEnd="252dp"
         android:layout_marginBottom="206dp"
         android:background="#070707"
-        android:ems="10"
         android:contentDescription="textbox6"
+        android:ems="10"
 
         android:onClick="clicker"
         android:textAlignment="center"
@@ -205,8 +206,8 @@
         android:layout_height="99sp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="66dp"
+        android:layout_marginEnd="101dp"
+        android:layout_marginBottom="100dp"
         android:backgroundTint="#1A237E"
         android:onClick="retry"
         android:text="Retry"
@@ -221,10 +222,10 @@
         android:layout_marginEnd="215dp"
         android:layout_marginBottom="521dp"
         android:text="P1:0"
+        android:textAlignment="center"
         android:textColor="#1A237E"
         android:textSize="28sp"
-        android:textStyle="bold"
-        android:textAlignment="center"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/p2stat"
@@ -239,5 +240,18 @@
         android:textColor="#1A237E"
         android:textSize="28sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="31dp"
+        android:onClick="navpvp"
+        android:text="Player Vs Player"
+        android:backgroundTint="#995bdd"
+        android:textSize="27sp" />
 
 </RelativeLayout>
