--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -247,11 +247,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="143dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/black"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="21dp"
+        android:backgroundTint="#995bdd"
         android:onClick="navigate"
-        android:text="BOT VS Player" />
+        android:text="BOT VS Player"
+        android:textSize="27sp" />
 
 
 </RelativeLayout>
