--- a/app/src/main/res/layout/activity_player_vs_player_form.xml
+++ b/app/src/main/res/layout/activity_player_vs_player_form.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".botVsPlayerForm">
-
+    tools:context=".playerVsPlayerForm">
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
@@ -44,17 +43,31 @@
 
     <EditText
         android:id="@+id/player1txtbox"
-        android:layout_width="374dp"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="19dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="392dp"
         android:ems="10"
-        android:hint="Enter your name here"
+        android:hint="Enter Player 1 name here"
         android:inputType="text"
         android:textAlignment="center"
-        android:textSize="33sp" />
+        android:textSize="30sp" />
+
+    <EditText
+        android:id="@+id/player2txtbox"
+        android:layout_width="371dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="301dp"
+        android:ems="10"
+        android:hint="Enter Player 2 name here"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/button4"
@@ -63,10 +76,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="118dp"
-        android:layout_marginBottom="291dp"
-        android:onClick="submitfun"
+        android:layout_marginStart="99dp"
+        android:layout_marginEnd="119dp"
+        android:layout_marginBottom="193dp"
+        android:onClick="submitpvp"
         android:text="Submit"
         android:textSize="29sp" />
 </RelativeLayout>
