--- a/app/src/main/res/layout/activity_bot_vs_player_form.xml
+++ b/app/src/main/res/layout/activity_bot_vs_player_form.xml
@@ -66,6 +66,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginEnd="118dp"
         android:layout_marginBottom="291dp"
+        android:backgroundTint="@color/cardview_dark_background"
         android:onClick="submitfun"
         android:text="Submit"
         android:textSize="29sp" />
