--- a/app/src/main/res/layout/activity_player_vs_player_form.xml
+++ b/app/src/main/res/layout/activity_player_vs_player_form.xml
@@ -79,6 +79,7 @@
         android:layout_marginStart="99dp"
         android:layout_marginEnd="119dp"
         android:layout_marginBottom="193dp"
+        android:backgroundTint="@color/cardview_dark_background"
         android:onClick="submitpvp"
         android:text="Submit"
         android:textSize="29sp" />
