--- a/app/src/main/res/layout/activity_initial_page.xml
+++ b/app/src/main/res/layout/activity_initial_page.xml
@@ -30,11 +30,11 @@
     <Button
         android:id="@+id/button5"
 
-        android:layout_width="382dp"
-        android:layout_height="93dp"
+        android:layout_width="392dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="9dp"
+        android:layout_marginEnd="0dp"
         android:layout_marginBottom="354dp"
         android:backgroundTint="@color/black"
         android:onClick="gotobvpform"
