--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,15 +44,16 @@
 
     <TextView
         android:id="@+id/text0"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_marginEnd="252dp"
         android:layout_marginBottom="400dp"
-        android:background="#070707"
-        android:ems="10"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+
+        android:background="#65118f"
         android:contentDescription="textbox0"
+        android:ems="10"
 
         android:onClick="clicker"
         android:textAlignment="center"
@@ -63,13 +64,13 @@
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="155dp"
+        android:layout_marginEnd="147dp"
         android:layout_marginBottom="400dp"
-        android:background="#070707"
+        android:background="#65118f"
         android:ems="10"
 
 
@@ -81,13 +82,13 @@
 
     <TextView
         android:id="@+id/text2"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="58dp"
+        android:layout_marginEnd="42dp"
         android:layout_marginBottom="400dp"
-        android:background="#070707"
+        android:background="#65118f"
         android:ems="10"
 
         android:onClick="clicker"
@@ -98,15 +99,14 @@
 
     <TextView
         android:id="@+id/text3"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="252dp"
-        android:layout_marginBottom="303dp"
-        android:background="#070707"
+        android:layout_marginBottom="295dp"
+        android:background="#65118f"
         android:ems="10"
-
         android:onClick="clicker"
         android:textAlignment="center"
         android:textColor="#F1EBEB"
@@ -115,13 +115,13 @@
 
     <TextView
         android:id="@+id/text4"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="155dp"
-        android:layout_marginBottom="303dp"
-        android:background="#070707"
+        android:layout_marginEnd="147dp"
+        android:layout_marginBottom="295dp"
+        android:background="#65118f"
         android:ems="10"
         android:onClick="clicker"
         android:textAlignment="center"
@@ -131,13 +131,13 @@
 
     <TextView
         android:id="@+id/text5"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="303dp"
-        android:background="#070707"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="295dp"
+        android:background="#65118f"
         android:ems="10"
 
         android:onClick="clicker"
@@ -149,15 +149,15 @@
 
     <TextView
         android:id="@+id/text6"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="252dp"
-        android:layout_marginBottom="206dp"
-        android:background="#070707"
-        android:ems="10"
+        android:layout_marginBottom="190dp"
+        android:background="#65118f"
         android:contentDescription="textbox6"
+        android:ems="10"
 
         android:onClick="clicker"
         android:textAlignment="center"
@@ -167,13 +167,13 @@
 
     <TextView
         android:id="@+id/text7"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="155dp"
-        android:layout_marginBottom="206dp"
-        android:background="#070707"
+        android:layout_marginEnd="147dp"
+        android:layout_marginBottom="190dp"
+        android:background="#65118f"
         android:ems="10"
 
         android:onClick="clicker"
@@ -181,16 +181,17 @@
         android:textColor="#F1EBEB"
         android:textSize="70sp"
         android:textStyle="bold" />
+
 
     <TextView
         android:id="@+id/text8"
-        android:layout_width="88dp"
-        android:layout_height="88dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="58dp"
-        android:layout_marginBottom="206dp"
-        android:background="#070707"
+        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="190dp"
+        android:background="#65118f"
         android:ems="10"
 
         android:onClick="clicker"
@@ -198,7 +199,6 @@
         android:textColor="#F1EBEB"
         android:textSize="70sp"
         android:textStyle="bold" />
-
 
     <Button
         android:id="@+id/button2"
